added directories for individual blog posts and added an image for each post

--- a/blog/second-post/index.mdx
+++ b/blog/second-post/index.mdx
@@ -2,6 +2,10 @@
 title: "My favorite foods"
 date: "08/11/2022"
 author: Alex Bryant
+hero_image: "./pizza.jpg"
+hero_image_alt: "A good-looking pizza"
+hero_image_credit_text: "Chad Montano"
+hero_image_credit_link: "https://unsplash.com/photos/MqT0asuoIcU"
 ---
 
 For my second post, I'm going to make a list of my favorite foods.
