--- a/blog/third-post/index.mdx
+++ b/blog/third-post/index.mdx
@@ -2,6 +2,10 @@
 title: "The Final Post (probably)"
 date: "08/11/2022"
 author: Alex Bryant
+hero_image: "./finish-line.jpg"
+hero_image_alt: "A finish line on some grass."
+hero_image_credit_text: "Joshua Hoehne"
+hero_image_credit_link: "https://unsplash.com/photos/Nsaqv7v2V7Q"
 ---
 
 This will more than likely be the final post on this blog as I wrap up finishing
